--- a/main.html
+++ b/main.html
@@ -4,10 +4,89 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML Assignment 3</title>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1 style="text-align:center">HTML Assignment #3</h1>
+	<table border="1px" cellspacing="1" cellpadding="1" class = "middle" id = "table-1">
+		<tr id="t11">
+			<td>A</td>
+			<td>B</td>
+			<td>C</td>
+		</tr>
+		<tr id="t12">
+			<td>D</td>
+			<td>E</td>
+			<td>F</td>
+		</tr>
+		<tr id="t13">
+			<td>G</td>
+			<td>H</td>
+			<td>I</td>
+		</tr>
+		</table>
+	<br>
+	<table border="1px" cellspacing="1px" cellpadding="1px" class= "middle" id="table-2">
+		<tr id="t21">
+			<td colspan = "6"></td>
+			
+		</tr>
+		<tr id="t22">
+			<td>A</td>
+			<td>B</td>
+			<td>C</td>
+			<td>D</td>
+			<td>E</td>
+			<td>F</td>
+		</tr>
+		<tr id="t23">
+			<td>G</td>
+			<td>H</td>
+			<td>I</td>
+			<td>J</td>
+			<td>K</td>
+			<td>L</td>
+		</tr>
+		<tr id="t24">
+			<td>M</td>
+			<td>N</td>
+			<td>O</td>
+			<td>P</td>
+			<td>Q</td>
+			<td>R</td>
+		</tr>
+		<tr id="t25">
+			<td>S</td>
+			<td>T</td>
+			<td>U</td>
+			<td>V</td>
+			<td>W</td>
+			<td>X</td>
+		</tr>
+		<tr id="t26">
+			<td>Y</td>
+			<td>Z</td>
+			<td>1</td>
+			<td>2</td>
+			<td>3</td>
+			<td>4</td>
+		</tr>
+	</table>
+	<br>
+	<table border = "1px solid black" cellspacing = "1px" cellpadding = "1px">
+      <tr style="background-color:green">
+		<td>
+		<img src = "https://media.istockphoto.com/id/1166768056/photo/blue-glitter-texture-and-shiny-sparkle.jpg?s=2048x2048&w=is&k=20&c=PCwhSCDmREpIn4eYjLsT4ZKqC767gc-BNalJq75ncN0=" height = "400" width = "400">
+		</td>
+	  </tr>
+		<tr style="background-color:blue">
+			<td></td>
+			<td></td>
+		</tr>
+		
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
