--- a/main.html
+++ b/main.html
@@ -10,79 +10,79 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1 style="text-align:center">HTML Assignment #3</h1>
-	<table border="1px" cellspacing="1" cellpadding="1" class = "middle" id = "table-1">
-		<tr id="t11">
-			<td>A</td>
-			<td>B</td>
-			<td>C</td>
+	<table class = "middle" id = "table-1"border = "1px solid black" cellspacing="1" cellpadding="1">
+		<tr id = "t11">
+			<td>left</td>
+			<td>center</td>
+			<td class = "right">right</td>
 		</tr>
-		<tr id="t12">
-			<td>D</td>
-			<td>E</td>
-			<td>F</td>
+		<tr class = "center" id = "t12">
+			<td>left</td>
+			<td>center</td>
+			<td class = "right">right</td>
 		</tr>
-		<tr id="t13">
-			<td>G</td>
-			<td>H</td>
-			<td>I</td>
+		<tr id ="t13">
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
 		</tr>
-		</table>
-	<br>
-	<table border="1px" cellspacing="1px" cellpadding="1px" class= "middle" id="table-2">
-		<tr id="t21">
-			<td colspan = "6"></td>
+	</table><br>
+	<table class = "middle" id = "table-2" border = "1px solid black"cellspacing="1" cellpadding="1">
+		<tr>
+		    <td id = "t21" colspan=6>A</td>
 			
 		</tr>
-		<tr id="t22">
-			<td>A</td>
+		<tr>
+		    <td>A</td>
 			<td>B</td>
 			<td>C</td>
 			<td>D</td>
 			<td>E</td>
 			<td>F</td>
 		</tr>
-		<tr id="t23">
-			<td>G</td>
+		<tr>
+		    <td>G</td>
 			<td>H</td>
 			<td>I</td>
 			<td>J</td>
 			<td>K</td>
 			<td>L</td>
 		</tr>
-		<tr id="t24">
-			<td>M</td>
+		<tr>
+		    <td>M</td>
 			<td>N</td>
 			<td>O</td>
 			<td>P</td>
 			<td>Q</td>
 			<td>R</td>
 		</tr>
-		<tr id="t25">
-			<td>S</td>
+		<tr>
+		    <td>S</td>
 			<td>T</td>
 			<td>U</td>
 			<td>V</td>
 			<td>W</td>
 			<td>X</td>
 		</tr>
-		<tr id="t26">
-			<td>Y</td>
+		<tr>
+		    <td>Y</td>
 			<td>Z</td>
 			<td>1</td>
 			<td>2</td>
 			<td>3</td>
 			<td>4</td>
 		</tr>
-	</table>
-	<br>
-	<table border = "1px solid black" cellspacing = "1px" cellpadding = "1px">
-      <tr style="background-color:green">
-		<td>
-		<img src = "https://media.istockphoto.com/id/1166768056/photo/blue-glitter-texture-and-shiny-sparkle.jpg?s=2048x2048&w=is&k=20&c=PCwhSCDmREpIn4eYjLsT4ZKqC767gc-BNalJq75ncN0=" height = "400" width = "400">
-		</td>
-	  </tr>
-		<tr style="background-color:blue">
+	</table><br>
+	<table width = "600px"class = "middle" id = "table-3" border = "1px solid black" cellspacing="1" cellpadding="1">
+		<tr style = "background-color:green">
 			<td></td>
+		</tr>
+		<tr>
+			<th>
+				<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg">
+			</th>
+		</tr>
+		<tr style = "background-color:blue">
 			<td></td>
 		</tr>
 		
