--- a/main.html
+++ b/main.html
@@ -78,9 +78,9 @@
 			<td></td>
 		</tr>
 		<tr>
-			<th>
+			<th id="t-image">
 				<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg">
-			</th>
+	</th>
 		</tr>
 		<tr style = "background-color:blue">
 			<td></td>
