--- a/main.html
+++ b/main.html
@@ -11,20 +11,20 @@
 	<!-- the entire body must be written by student -->
 	<h1 style="text-align:center">HTML Assignment #3</h1>
 	<table class = "middle" id = "table-1"border = "1px solid black" cellspacing="1" cellpadding="1">
-		<tr id = "t11">
-			<td>left</td>
-			<td>center</td>
-			<td class = "right">right</td>
+		<tr>
+			<td id = "t11">left</td>
+			<td id = "t12">center</td>
+			<td id = "t13"class = "right">right</td>
 		</tr>
-		<tr class = "center" id = "t12">
-			<td>left</td>
-			<td>center</td>
-			<td class = "right">right</td>
+		<tr class = "center">
+			<td id = "t11">left</td>
+			<td id = "t12">center</td>
+			<td id = "t13" class = "right">right</td>
 		</tr>
 		<tr id ="t13" class ="right">
-			<td>left</td>
-			<td>center</td>
-			<td class="right">right</td>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13"class="right">right</td>
 		</tr>
 	</table><br>
 	<table class = "middle" id = "table-2" border = "1px solid black"cellspacing="1" cellpadding="1">
