--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1 style="text-align:center">HTML Assignment #3</h1>
-	<table class = "middle" id = "table-1"border = "1px solid rgb(0, 0, 0)'" cellspacing="1" cellpadding="1">
+	<table class = "middle" id = "table-1"border = "1px solid rgb(0, 0, 0)" cellspacing="1" cellpadding="1">
 		<tr id ="t11">
 			<td >left</td>
 			<td >center</td>
