--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1 style="text-align:center">HTML Assignment #3</h1>
-	<table class = "middle" id = "table-1" border = "1px solid black" cellspacing="1" cellpadding="1">
+	<table class = "middle" id = "table-1" border = "1px solid black" cellspacing = "1" cellpadding = "1">
 		<tr id ="t11">
 			<td >left</td>
 			<td >center</td>
@@ -21,9 +21,9 @@
 			<td >center</td>
 			<td class = "right">right</td>
 		</tr>
-		<tr id ="t13" class ="right">
+		<tr id ="t13">
 			<td >left</td>
-			<td >center</td>
+			<td class = "center">center</td>
 			<td class="right">right</td>
 		</tr>
 	</table><br>
@@ -74,7 +74,7 @@
 		</tr>
 	</table><br>
 	<table width = "600px" class = "middle" id = "table-3" border = "1px solid black" cellspacing="1" cellpadding="1">
-		<tr style = "background-color:green">
+		<tr style = "background-color:green" height = 15>
 			<td></td>
 		</tr>
 		<tr>
@@ -82,7 +82,7 @@
 				<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg">
 	</th>
 		</tr>
-		<tr style = "background-color:blue">
+		<tr style = "background-color:blue" height = 15>
 			<td></td>
 		</tr>
 		
