--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>HTML Assignment #3</h1>
-	<table id="table-1" class="middle" border="1px solid black" cell-spacing="1px" cell-padding="1px">
+	<table id="table-1" class="middle" border="1px solid rgb(0,0,0)" cell-spacing="1px" cell-padding="1px">
   <tr>
     <td id="t11" class="center">Column 1</td>
     <td id="t12" class="center">Column 2</td>
