--- a/main.html
+++ b/main.html
@@ -12,19 +12,19 @@
 	<h1>HTML Assignment #3</h1>
 	<table id="table-1" class="middle" border="1px solid rgb(0,0,0)" cell-spacing="1px" cell-padding="1px">
   <tr>
-    <td id="t11" class="center">Column 1</td>
-    <td id="t12" class="center">Column 2</td>
-    <td id="t13" class="right">Column 3</td>
+    <td id="t11" class="center">left</td>
+    <td id="t12" class="center">center</td>
+    <td id="t13" class="right">right</td>
   </tr>
   <tr>
-    <td class="center">Row 2</td>
-    <td class="center">Row 2</td>
-    <td class="right">Row 2</td>
+    <td class="center">left</td>
+    <td class="center">center</td>
+    <td class="right">right</td>
   </tr>
   <tr>
-    <td class="center">Row 3</td>
-    <td class="center">Row 3</td>
-    <td class="right">Row 3</td>
+    <td class="center">left</td>
+    <td class="center">center</td>
+    <td class="right">right</td>
   </tr>
 </table>
 
@@ -45,30 +45,17 @@
 
 	<table id="table-3" class="middle" border="1px solid black" cell-spacing="1px" cell-padding="1px">
   <tr>
-    <td class="green">Row 1</td>
-    <td class="green">Row 1</td>
-    <td class="green">Row 1</td>
-    <td class="green">Row 1</td>
-    <td class="green">Row 1</td>
-    <td class="green">Row 1</td>
+    <td class="green" colspanspan=6>Row 1</td>
+	  
   </tr>
   <tr>
-    <td id="t-image" class="center">
+    <td id="t-image" class="center" colspan=6>
       <img src="https://example.com/image.jpg" alt="Image">
     </td>
-    <td class="center">Row 2</td>
-    <td class="center">Row 2</td>
-    <td class="center">Row 2</td>
-    <td class="center">Row 2</td>
-    <td class="center">Row 2</td>
+    
   </tr>
   <tr>
-    <td class="blue">Row 3</td>
-    <td class="blue">Row 3</td>
-    <td class="blue">Row 3</td>
-    <td class="blue">Row 3</td>
-    <td class="blue">Row 3</td>
-    <td class="blue">Row 3</td>
+    <td class="blue" colspan=6>Row 3</td>
   </tr>
 </body>
 </html>
